--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,8 @@ ja:
               confirmation: "がパスワードと一致しません"
             nickname:
               blank: "は入力必須です"
+            messages:
+            record_invalid: "ユーザーの作成中にエラーが発生しました"
         article:
           attributes:
             prefecture:
