--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,9 @@ ja:
               taken: "は既に使用されています"
             password:
               blank: "は入力必須です"
-              invalid: "は無効です"
+              invalid: "は無効です。半角英数字を含めてください"
+              too_short: "は%{count}文字以上で入力してください"
+              invalid: "は無効です。半角英数字を含めてください"
             password_confirmation:
               blank: "は入力必須です"
               confirmation: "がパスワードと一致しません"
@@ -35,8 +37,7 @@ ja:
               blank: "内容は入力必須です"
             partner_id:
               other_than: "パートナーを選択してください"
-            travel_site_id:
-              other_than: "旅行サイトを選択してください"
+
 
 
 
